--- a/Android/Dwells/app/src/main/res/values/strings.xml
+++ b/Android/Dwells/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_kot_detail">KotDetail</string>
     <string name="separator">, </string>
+    <string name="view_on_web">View on web</string>
+    <string name="bookmark">Bookmark</string>
 </resources>
