--- a/Android/Dwells/app/src/main/res/values/strings.xml
+++ b/Android/Dwells/app/src/main/res/values/strings.xml
@@ -8,4 +8,8 @@
     <string name="separator">, </string>
     <string name="view_on_web">View on web</string>
     <string name="bookmark">Bookmark</string>
+    <string name="title_activity_route">RouteActivity</string>
+    <string name="city_prompt">Select City</string>
+    <string name="drawer_open">Closing city selector</string>
+    <string name="drawer_close">Opening city selector</string>
 </resources>
